roles/postgres13/files/pgadmin4-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: pgadmin4
  namespace: postgres
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`pgadmin4.local.lan`) 
    kind: Rule
    services:
    - name: pgadmin4
      port: 80
