roles/postgres13/files/postgres13-ingressroute.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: postgres13
  namespace: postgres
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`postgres13.local.lan`) 
    kind: Rule
    services:
    - name: postgres13
      port: 5432
